<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.fimu.ConcertDetails" >

    <RelativeLayout
        android:id="@+id/r_layout_buttons"
        android:layout_width="fill_parent"
        android:layout_height="140dp"
        android:layout_alignLeft="@+id/text_style_details"
        android:layout_centerVertical="true"
        tools:context=".ConcertDetails" >

        <Button
            android:id="@+id/b_day_three"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:enabled="false"
            android:background="@drawable/day_blank_icon"/>

        <Button
            android:id="@+id/b_day_two"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/b_day_three"
            android:layout_toLeftOf="@+id/b_day_three"
            android:enabled="false"
            android:background="@drawable/day_blank_icon"/>

        <Button
            android:id="@+id/b_day_four"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/b_day_three"
            android:layout_alignBottom="@+id/b_day_three"
            android:layout_toRightOf="@+id/b_day_three"
            android:enabled="false"
            android:background="@drawable/day_blank_icon"/>

        <Button
            android:id="@+id/b_day_one"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/b_day_three"
            android:layout_toRightOf="@+id/b_day_two"
            android:enabled="false"
            android:background="@drawable/day_blank_icon"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/text_style_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/r_layout_buttons"
        android:layout_alignLeft="@+id/text_scene_datails"
        android:paddingTop="5dp"
        android:text="@string/genre"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/text_scene_datails"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_style_details"
        android:layout_alignRight="@+id/text_name_details"
        android:text="@string/scene"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/text_time_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/r_layout_buttons"
        android:layout_centerHorizontal="true"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/text_name_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_scene_datails"
        android:layout_alignLeft="@+id/text_time_details"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:lines="4"
        android:text="@string/group_name"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:typeface="serif" />

</RelativeLayout>